app-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-amb-configuracio
spec:
  containers:
  - name: el-meu-contenidor
    image: alpine
    command: ["/bin/sh", "-c", "echo El missatge és: $MISSATGE_APP i la clau és: $CLAU_DB; sleep 3600"]
