nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx-k3s
  labels:
    app: web
spec:
  containers:
  - name: web-srv
    image: nginx:alpine
    ports:
    - containerPort: 80
