prova-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: servei-web-nodeport
spec:
  type: NodePort
  selector:
    app: prova-serv
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
